<?xml version="1.0"?>
<package format="3">
  <name>sverk_interfaces</name>
  <version>0.0.1</version>
  <description>
    High-level Python client for sverk_drone: offboard_control, fmu_calibration_control
    and optional led_control (LED strip). Requires offboard_interfaces, std_msgs, std_srvs;
    for LED API (drone.led) optional: led_interfaces and led_control node.
  </description>

  <maintainer email="petayyyy@gmail.com">Petayyyy</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>offboard_interfaces</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>offboard_control</exec_depend>
  <exec_depend>fmu_calibration_control</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

