<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fmu_calibration_control</name>
  <version>0.0.1</version>
  <description>ROS 2 node: send PX4 preflight calibration and quick disarm via /fmu/in/vehicle_command (uXRCE-DDS).</description>
  <maintainer email="petayyyy@gmail.com">Sverk</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
