<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_services_bridge</name>
  <version>1.0.0</version>
  <description>HTTP API bridge for listing and calling ROS2 services (for use with dotmdVisualiser).</description>
  <maintainer email="sverk@example.com">Sverk</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-tornado</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
