<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_pose</name>
  <version>0.0.1</version>
  <description>Utilities for generating ArUco marker maps (text files) for use with aruco_map.</description>

  <maintainer email="petayyyymail@gmail.com">sverk</maintainer>
  <license>MIT</license>

  <!-- Python-only utility package -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

